--- a/blog/templates/contacto.html
+++ b/blog/templates/contacto.html
@@ -8,57 +8,31 @@ Estamos ansiosos por saber de vos
 {% block imagen_principal %} {% static 'assets/img/contacto.jpg' %} {% endblock imagen_principal %}
 
 {% block contenido %}
-    <section id="contact" class="contact mb-5">
-      <div class="container" data-aos="fade-up">
-        <div class="row gy-4">
-          <div class="col-md-4">
-            <div class="info-item">
-              <i class="bi bi-geo-alt"></i>
-              <h3>Address</h3>
-              <address>A108 Adam Street, NY 535022, USA</address>
-            </div>
-          </div><!-- End Info Item -->
-
-          <div class="col-md-4">
-            <div class="info-item info-item-borders">
-              <i class="bi bi-phone"></i>
-              <h3>Phone Number</h3>
-              <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
-            </div>
-          </div><!-- End Info Item -->
-
-          <div class="col-md-4">
-            <div class="info-item">
-              <i class="bi bi-envelope"></i>
-              <h3>Email</h3>
-              <p><a href="mailto:info@example.com">info@example.com</a></p>
-            </div>
-          </div><!-- End Info Item -->
-
-        </div>
-
+    <section id="contacto" class="contacto mb-5">
+      <div class="container" >
         <div class="form mt-5">
-          <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+          <form action="" method="post" role="form" class="contacto-form ">
+            {% csrf_token %}
             <div class="row">
               <div class="form-group col-md-6">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                <input type="text" name="nombre" class="form-control" id="nombre" placeholder="Su Nombre" required>
               </div>
               <div class="form-group col-md-6">
-                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                <input type="email" class="form-control" name="email" id="email" placeholder="Su dirección de correo electrónico" required>
               </div>
             </div>
             <div class="form-group">
-              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+              <input type="text" class="form-control" name="asunto" id="asunto" placeholder="Asunto" required>
             </div>
             <div class="form-group">
-              <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+              <textarea class="form-control" name="mensaje" rows="5" placeholder="Mensaje" required></textarea>
             </div>
             <div class="my-3">
               <div class="loading">Loading</div>
               <div class="error-message"></div>
               <div class="sent-message">Your message has been sent. Thank you!</div>
             </div>
-            <div class="text-center"><button type="submit">Send Message</button></div>
+            <div class="text-center"><button type="submit">Enviar Mensaje</button></div>
           </form>
         </div><!-- End Contact Form -->
 
